Modif chemin d'accés

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=1">
     <title>Document</title>
-    <link rel="stylesheet" href="css/index.scss">
-    <link href="../node_modules/@fortawesome/fontawesome-free/css/all.css" rel="stylesheet">
+    <link rel="stylesheet" href="public/css/index.scss">
+    <link href="node_modules/@fortawesome/fontawesome-free/css/all.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -37,10 +37,10 @@
     <meta property="og:site_name" content="Caserne Pompiers Grand Couronne" />
 
     <!-- Favicons -->
-    <link rel="icon" type="image/png" href="img/LogoUrl.png">
+    <link rel="icon" type="image/png" href="public/img/LogoUrl.png">
 </head>
 <body>
-    <img src="img/PAGE DEBUT POMPIER EN FLAMME/feu.jpg" alt="">
+    <img src="public/img/PAGE DEBUT POMPIER EN FLAMME/feu.jpg" alt="">
     <div class="presentation logoAccueil">
         
         <div>
@@ -153,10 +153,10 @@
             </div>
             <div class="row">
                 <div>
-                    <a href="page/accueil.html"><p>Découvrir</p> </a>
+                    <a href="public/page/accueil.html"><p>Découvrir</p> </a>
                 </div>
                 <div class="icon">
-                    <a href="page/accueil.html"><i class="fas fa-arrow-right"></i></a>
+                    <a href="public/page/accueil.html"><i class="fas fa-arrow-right"></i></a>
                 </div>
             </div>
         </div>
