Responsive Toute page

--- a/jeu/index.html
+++ b/jeu/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sauve Qui Feu !</title>
-    <link rel="stylesheet" href="../public/css/index.scss">
+    <link rel="stylesheet" href="../public/css/index.css">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link href="../node_modules/@fortawesome/fontawesome-free/css/all.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
